# umberwm

./: .gitignore  Cargo.toml  README.md  install.py  umberwm-start  umberwm.desktop  yazgoowm.py
.github/workflows/: rust.yml
src/: error.rs  geometries.rs  keycode.rs  lib.rs  main.rs  model.rs  serializable_conf.rs  serializable_state.rs  umberwm.rs  umberwm_impl.rs
src/umberwm_impl/: helpers.rs  resize.rs
umbertutor/: Dockerfile  Makefile  README.md  action-handler.sh  alacritty-umbertutor.yml  start-umberwm  umbertutor.sh  umberwm.ron
