[package]
name = "umberwm"
version = "0.0.12"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "minimalist X11 window manager"
readme = "README.md"
homepage = "https://github.com/yazgoo/umberwm"
repository = "https://github.com/yazgoo/umberwm"
keywords = ["wm", "x11", "terminal"]
categories = ["GUI"]

[dependencies]
regex = "1.3"
[dependencies.xcb]
version = "0.9"
features = ["randr"]
