[package]
name = "umberwm"
version = "0.0.31"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "minimalist X11 window manager"
readme = "README.md"
homepage = "https://github.com/yazgoo/umberwm"
repository = "https://github.com/yazgoo/umberwm"
keywords = ["wm", "x11", "terminal"]
categories = ["GUI"]
[dependencies]
xmodmap-pke-umberwm = "0.0.1"
thiserror = "1.0.24"
dirs = "3.0" 
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
[dependencies.serde_with]
version = "1.9"
features = ["macros"]
[dependencies.xcb]
version = "0.9"
features = ["randr"]
